[tool.poetry]
name = "pycode"
version = "0.1.0"
description = ""
authors = ["Hasan Ali <hans1998ali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.55.3"
python-dotenv = "^1.0.1"
langchain = "^0.3.9"
langchain-openai = "^0.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
